--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "parse-link-header",
-  "version": "2.0.0",
+  "name": "@web3-storage/parse-link-header",
+  "version": "0.0.0",
   "description": "Parses a link header and returns paging information for each contained link.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "tap test/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/thlorenz/parse-link-header.git"
+    "url": "git://github.com/web3-storage/parse-link-header.git"
   },
-  "homepage": "https://github.com/thlorenz/parse-link-header",
-  "dependencies": {},
+  "homepage": "https://github.com/web3-storage/parse-link-header",
   "devDependencies": {
-    "tape": "~1.0.3",
-    "tap": "~0.4.3"
+    "tap": "^15.1.6",
+    "tape": "^5.5.2"
   },
   "keywords": [
     "parse",
@@ -33,21 +33,5 @@
   "license": "MIT",
   "engine": {
     "node": ">=10"
-  },
-  "testling": {
-    "files": "test/*.js",
-    "browsers": [
-      "ie/8..latest",
-      "firefox/17..latest",
-      "firefox/nightly",
-      "chrome/22..latest",
-      "chrome/canary",
-      "opera/12..latest",
-      "opera/next",
-      "safari/5.1..latest",
-      "ipad/6.0..latest",
-      "iphone/6.0..latest",
-      "android-browser/4.2..latest"
-    ]
   }
 }
